# mediautils

./: AUTHORS.md  CLAUDE.md  CONTRIBUTING.md  HISTORY.md  README.md  citation.cff  pyproject.toml
.github/: ISSUE_TEMPLATE.md
.github/workflows/: build.yml
.run/: All tests.run.xml  Generate docs.run.xml
docs/: conf.py  index.md
docs/presentation/: installation.md
docs/reference/: file_name.md  image.md  index.md  media.md  my_class_1.md  my_class_2.md  my_class_3.md  video.md
docs/tutorials/: index.md  tutorial.ipynb
legacy_notebooks/: Untitled.ipynb  directory_names_to_metadata.ipynb  file_names_to_metadata.ipynb  process_wa_images_and_videos.ipynb
mediautils/: __init__.py  cli.py  file_name.py  image.py  media.py  video.py
mediautils/sub_package_1/: my_class_1.py
mediautils/sub_package_2/: my_class_2.py  my_class_3.py
tests/: __init__.py  test_mediautils.py
